# ATS

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md  RELEASE_NOTES.md  ats_create_developer_branch.py  pyproject.toml  setup.cfg  setup.py  version.py
.github/workflows/: format.yml  main.yml
.gitlab/: assert_ats_results.awk  kripke.yml  runners.yml
ats/: Machines  __init__.py  __main__.py  ats  ats3  atsut.py  attributedict.py  configuration.py  executables.py  log.py  machines.py  management.py  parser.py  reportutils.py  schedulers.py  setup-py2.py  setup.py  show_stats.py  tests.py  times.py  tox.ini  version.py
ats/GitFiles/: ats_create_developer_branch.py  ats_create_release_branch.py  ats_update_version_and_tag.py
ats/atsMachines/: docker.py  fluxScheduled.py  lcBatch.py  lcMachines.py  lsf_asq.py  no_srun.py  slurmProcessorScheduled.py  standard.py  utils.py
ats/tools/: atsflux.py  atsformat.py  atslite1.py  atslite3.py
ats/util/: base.py  commands.py  generic_utils.py  logs.py
docs/: Makefile  README.developer.install.blueos.txt  README.developer.install.toss3.txt  README.developer.install.toss4.txt  README.developer.install.toss4.whippet.txt  README.mac.txt  README.old.txt  README.sphinx.txt
docs/source/: andyroid.rst  appendix.rst  ats.rst  conf.py  index.rst
scripts/: ats_create_developer_branch.py  update-version.x
test/BasicTests/: long_test_name.ats
test/HelloATS/: READ.ME  ats_check_log.py  ats_hello  create_test_ats.py
test/HelloCPUAffinity/: READ.ME  create_test_ats.py  hello_affinity.cc
test/HelloGPU/: READ.ME  hello_gpu.cc  test.ats
test/HelloGPU2/: Makefile  Makefile.hip  Makefile.nvcc  READ.ME  READ.ME.CPX  gputest_this.cc  gputest_this.hh  test.ats
test/HelloOMP/: Makefile  READ.ME  create_test_ats.py  omp_test.cc
test/HelloSameNode/: READ.ME  create_test_ats.py  test_file_read.py  test_file_write.py
test/Kripke/: READ.ME  (+5 more)
(+117 files in other folders)
