[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py38']
extend-exclude = '''
/(
  # Use ats/bin/atsformat to format ats/atsMachines
  | ats/atsMachines/
  | ats/bin/
  | scripts/
)/
'''

[tool.isort]
profile = "black"
