[metadata]
name = ats
author = "Shawn A. Dawson"
author_email = dawson6@llnl.gov
description = "Automated Testing System"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LLNL/ATS
version = 7.1.1

[options]
install_requires=
    numpy
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ats = ats.bin._ats:main
    ats3 = ats.bin._ats3:main
    atslite1 = ats.bin.atslite1:main
    atslite3 = ats.bin.atslite3:main
